syntax = "proto3";

option java_package = "org.bitbucket.cpchain.chain.protos";
option go_package = "protos.chain";

package protos_chain;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

service PublicEthereumAPI {
  rpc GasPrice(google.protobuf.Empty) returns (PublicEthereumAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/gasPrice"
         body : "*"
    };
  }
  rpc ProtocolVersion(google.protobuf.Empty) returns (PublicEthereumAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/protocolVersion"
         body : "*"
    };
  }
  rpc Syncing(google.protobuf.Empty) returns (PublicEthereumAPIReply) {
    option (google.api.http) = {
        post : "/apis/v1/eth/syncing"
         body : "*"
    };
  }
}

message PublicEthereumAPIReply {
  bytes gas_price = 1;
  uint32 version = 2;
  google.protobuf.BoolValue is_ok = 3;
  google.protobuf.Any sync_info = 4;
}

//###################################################

service PublicTxPoolAPI {
  rpc Content(google.protobuf.Empty) returns (PublicTxPoolAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/txpool/content"
         body : "*"
    };
  }
  rpc Inspect(google.protobuf.Empty) returns (PublicTxPoolAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/txpool/inspect"
         body : "*"
    };
  }
  rpc Status(google.protobuf.Empty) returns (PublicTxPoolAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/txpool/status"
         body : "*"
    };
  }
}

message RPCTransaction {
  bytes blockHash = 1;
  uint64 block_number = 2;
  bytes from = 3;
  uint64 gas = 4;
  bytes gas_price = 5;
  bytes hash = 6;
  bytes input = 7;
  uint64 nonce = 8;
  bytes to = 9;
  uint32 trasaction_index = 10;
  bytes value = 11;
  bytes v = 12;
  bytes r = 13;
  bytes s = 14;
}

message PublicTxPoolAPIReply {
  map<string, uint64> status = 1;
  google.protobuf.Any content = 2;
  google.protobuf.Any inspect = 3;
}

//###################################################
service PublicAccountAPI {
  rpc Accounts(google.protobuf.Empty) returns (PublicAccountAPIReply) {
    option (google.api.http) = {
post: "/apis/v1/eth/accounts"
        body : "*"
    };
  }
}

message PublicAccountAPIReply { google.protobuf.Any accounts = 1; }
//###################################################
service PrivateAccountAPI {
  rpc DeriveAccount(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/deriveAccount"
         body : "*"
    };
  }
  rpc EcRecover(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/ecRecover"
         body : "*"
    };
  }
  rpc ImportRawKey(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/importRawKey"
         body : "*"
    };
  }
  rpc ListAccounts(google.protobuf.Empty) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/listAccounts"
         body : "*"
    };
  }
  rpc ListWallets(google.protobuf.Empty) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/listWallets"
         body : "*"
    };
  }
  rpc LockAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/lockAccount"
         body : "*"
    };
  }
  rpc NewAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/newAccount"
         body : "*"
    };
  }
  rpc OpenWallet(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/openWallet"
         body : "*"
    };
  }
  rpc SendTransaction(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/sendTransaction"
         body : "*"
    };
  }
  rpc Sign(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/sign"
         body : "*"
    };
  }
  rpc SignAndSendTransaction(PrivateAccountAPIRequest)
    returns (PrivateAccountAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/signAndSendTransaction"
         body : "*"
      };
    }
  rpc SignTransaction(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/signTransaction"
         body : "*"
    };
  }
  rpc UnlockAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/unlockAccount"
         body : "*"
    };
  }
}

message PrivateAccountAPIRequest {
  google.protobuf.StringValue url = 1;
  google.protobuf.StringValue path = 2;
  google.protobuf.BoolValue pin = 3;
  bytes data = 4;
  bytes sig = 5;
  google.protobuf.StringValue priv_key = 6;
  google.protobuf.StringValue password = 7;
  bytes addr = 8;
  google.protobuf.UInt64Value duration = 9;
  google.protobuf.Any send_tx_args = 10;
}

message PrivateAccountAPIReply {
  google.protobuf.Any account = 1;
  google.protobuf.Any account_addresses = 2;
  google.protobuf.Any raw_wallets = 3;
  bool is_ok = 4;
  bytes tx_hash = 5;
  google.protobuf.Any sign_tx_result= 6;
  bytes signature = 7;
  bytes address = 8;
}

// rawWallet is a JSON representation of an accounts.Wallet interface, with its
// data contents extracted into plain fields.
message RawWallet {
  string url = 1;
  string status = 2;
  string failure = 3;
  repeated google.protobuf.Any accounts = 4;
}

//###################################################
service PublicBlockChainAPI {
  rpc BlockNumber(google.protobuf.Empty) returns (PublicBlockChainAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/blockNumber"
         body : "*"
    };
  }
  rpc Call(PublicBlockChainAPIRequest) returns (PublicBlockChainAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/call"
         body : "*"
    };
  }
  rpc EstimateGas(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/estimateGas"
         body : "*"
      };
    }
  rpc GetBalance(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getBalance"
         body : "*"
      };
    }
  rpc GetBlockByHash(PublicBlockChainAPIRequest) returns (
    PublicBlockChainAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/getBlockByHash"
         body : "*"
    };
  }
  rpc GetBlockByNumber(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getBlockByNumber"
         body : "*"
      };
    }
  rpc GetCode(PublicBlockChainAPIRequest) returns (PublicBlockChainAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/getCode"
         body : "*"
    };
  }
  rpc GetStorageAt(PublicBlockChainAPIRequest) returns (
    PublicBlockChainAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/getStorageAt"
         body : "*"
    };
  }
  rpc GetUncleByBlockHashAndIndex(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getUncleByBlockHashAndIndex"
         body : "*"
      };
    }
  rpc GetUncleByBlockNumberAndIndex(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getUncleByBlockNumberAndIndex"
         body : "*"
      };
    }
  rpc GetUncleCountByBlockHash(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getUncleCountByBlockHash"
         body : "*"
      };
    }
  rpc GetUncleCountByBlockNumber(PublicBlockChainAPIRequest)
    returns (PublicBlockChainAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getUncleCountByBlockNumber"
         body : "*"
      };
    }
}
message PublicBlockChainAPIRequest {
  message CallArgs {
    bytes from = 1;
    bytes to = 2;
    uint64 gas = 3;
    bytes gas_price = 4;
    bytes value = 5;
    bytes data = 6;
    bool is_private = 7;
  }
  /* CallArgs args = 1; */
  google.protobuf.Any args = 1;
  uint64 block_number = 2;
  bytes address = 3;
  bool full_tx = 4;
  string key = 5;
  bytes block_hash = 6;
  uint64 index = 7;
}
message PublicBlockChainAPIReply {
  uint64 block_number = 1;
  bytes payload = 2;
  uint64 estimate_gas = 3;
  bytes balance = 4;
  google.protobuf.Any block_info = 5;
  bytes code = 6;
  bytes storage = 7;
  uint64 uncle_count = 8;
  bytes result = 9;
}

//###################################################
message PublicTransactionPoolAPIRequest {
  bytes block_hash = 1;
  uint64 block_number = 2;
  uint64 index = 3;
  bytes tx_hash = 4;
  bytes address = 5;
  google.protobuf.Any send_tx_args = 6;
  bytes gas_price = 7;
  google.protobuf.UInt64Value gas_limit = 8;
  bytes payload = 9;
  bytes encoded_tx = 10;
}
message PublicTransactionPoolAPIReply {
  uint64 count = 1;
  bytes payload = 2;
  google.protobuf.Any rpc_transaction = 3;
  // RPCTransaction rpc_transaction = 3;
  bytes tx_receipt = 4;
  bytes tx_hash = 5;
  google.protobuf.Any sign_tx_result = 6;
  bytes tx_bytes = 7;
  google.protobuf.Any fields = 8;
  bytes signature = 9;
  // repeated RPCTransaction pending_txs = 10;
  google.protobuf.Any pending_txs = 10;
}

message SignTransactionResult {
  bytes raw = 1;
  google.protobuf.Any tx = 2;
}

service PublicTransactionPoolAPI {
  rpc GetBlockTransactionCountByHash(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getBlockTransactionCountByHash"
         body : "*"
      };
    }
  rpc GetBlockTransactionCountByNumber(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getBlockTransactionCountByNumber"
         body : "*"
      };
    }
  rpc GetRawTransactionByBlockHashAndIndex(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getRawTransactionByBlockHashAndIndex"
         body : "*"
      };
    }
  rpc GetRawTransactionByBlockNumberAndIndex(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getRawTransactionByBlockNumberAndIndex"
         body : "*"
      };
    }
  rpc GetRawTransactionByHash(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getRawTransactionByHash"
         body : "*"
      };
    }
  rpc GetTransactionByBlockHashAndIndex(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getTransactionByBlockHashAndIndex"
         body : "*"
      };
    }
  rpc GetTransactionByBlockNumberAndIndex(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getTransactionByBlockNumberAndIndex"
         body : "*"
      };
    }
rpc GetTransactionByHash(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getTransactionByHash"
         body : "*"
      };
    }
  rpc GetTransactionCount(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getTransactionCount"
         body : "*"
      };
    }
  rpc GetTransactionReceipt(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/getTransactionReceipt"
         body : "*"
      };
    }
  rpc PendingTransactions(google.protobuf.Empty)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/pendingTransactions"
         body : "*"
      };
    }
  rpc Resend(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/resend"
         body : "*"
      };
    }
  rpc SendRawTransaction(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/sendRawTransaction"
         body : "*"
      };
    }
  rpc SendTransaction(PublicTransactionPoolAPIRequest) returns (
    PublicTransactionPoolAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/sendTransaction"
         body : "*"
    };
  }
  rpc Sign(PublicTransactionPoolAPIRequest)
    returns (PublicTransactionPoolAPIReply) {
      option (google.api.http) = {
post : "/apis/v1/eth/sign"
         body : "*"
      };
    }
  rpc SignTransaction(PublicTransactionPoolAPIRequest) returns (
    PublicTransactionPoolAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/eth/signTransaction"
         body : "*"
    };
  }
}
//###################################################
message PublicDebugAPIRequest { uint64 block_number = 1; }
message PublicDebugAPIReply {
   string info = 1; 
   string rlp = 2;
  }

service PublicDebugAPI {
  rpc GetBlockRlp(PublicDebugAPIRequest) returns (PublicDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/getBlockRlp"
         body : "*"
    };
  }
  rpc PrintBlock(PublicDebugAPIRequest) returns (PublicDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/printBlock"
         body : "*"
    };
  }
  rpc SeedHash(PublicDebugAPIRequest) returns (PublicDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/seedHash"
         body : "*"
    };
  }
}
//###################################################
service PrivateDebugAPI {
  rpc ChaindbCompact(google.protobuf.Empty) returns (PrivateDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/chaindbCompact"
         body : "*"
    };
  }
  rpc ChaindbProperty(PrivateDebugAPIRequest) returns (PrivateDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/chaindbProperty"
         body : "*"
    };
  }
  rpc SetHead(PrivateDebugAPIRequest) returns (PrivateDebugAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/debug/setHead"
         body : "*"
    };
  }
}
message PrivateDebugAPIRequest {
  string property = 1;
  uint64 block_number= 2;
}
message PrivateDebugAPIReply {
   string property = 1; 
   uint64 block_number = 2;
  }
message PublicNetAPIReply {
  bool is_listening = 1;
  string version = 2;
  uint32 peer_count = 3;
}
//###################################################
service PublicNetAPI {
  rpc Listening(google.protobuf.Empty) returns (PublicNetAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/public/listening"
         body : "*"
    };
  }
  rpc PeerCount(google.protobuf.Empty) returns (PublicNetAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/public/peerCount"
         body : "*"
    };
  }
  rpc Version(google.protobuf.Empty) returns (PublicNetAPIReply) {
    option (google.api.http) = {
post : "/apis/v1/public/version"
         body : "*"
    };
  }
}
//###################################################
